# f3d

./: README.md
f3d-core/: README  TODO  f3d-cmake-setup.cmake  f3d-core.asd  f3d-pkg.lisp  tests.lisp
f3d-core/c/: CMakeLists.txt  INSTALL-FREEDIUS  TAGS  f3d-cmake-setup.cmake  freedius-acl.def  freedius-sbcl.def  freedius.def  lisptk.def  math.def  run-cmake.sh  run-cmake2.sh  tar-freedius.sh
f3d-core/c/img/: CMakeLists.txt  array-image-accessors.c++  array-image.c++  bmp-io.c++  box-filter-decimate.c++  cimage.c++  color.c++  file-image-io.c++  file-image.c++  gauss-convolve.c++  image-getput.c++  image-io.c++  image.c++  iu-testbed-io.c++  jpeg-io.c++  jpeg-mem-dst.c++  jpeg-mem-src.c++  lazy-image.c++  page_handler.c++  paged-image-accessors.c++  paged-image.c++  ppm-io.c++  sunras.c++  tiff-ffi.c  tiff-io.c++
f3d-core/c/include/: array-image.h  base-class.h  bmp-io.h  cimage.h  cme-error.h  cme-list.h  cme_time.h  codewarrior.h  color.h  config.h  coordinates.h  file-image.h  gjpeglib.h  glffi.h  image-io.h  image-ops.h  image-types.h  image.h  iu-testbed-io.h  jpeg-io.h  lazy-image.h  lisp-callback.h  lisp-ffi-macros.h  list.h  minmax.h  misc.h  mymalloc.h  namespace.h  page_handler.h  paged-image-subclasses.h  paged-image.h  ppm-io.h  sunras.h  tiff-io.h  trace-output.h
f3d-core/c/jpeg/: configure  jmorecfg.h  jpeg.mak
f3d-core/c/misc/: CMakeLists.txt  base-class.c++  cme-error.c++  cme_time.c++  freedius_so_init.c++  io.c++  list.c++  misc.c++  mkfile.c  run-program.c++
f3d-core/c/tiff/: jpeg.lib  libtiff_i.exp  nmake.opt  tif_config.h.cmakein  tiff.mak
f3d-core/c/zlib/: zlib.mak
f3d-core/emacs/: .swank.lisp  README  clos-indent.el  freedius-slime.el  loop-indent.el  patch-system.el  slime-hacks.el
f3d-core/ev-pathnames/: ev-pathname-pkg.lisp  ev-pathnames.lisp
f3d-core/foreign-vector/: acl-foreign-vector.lisp  load-libfreedius.lisp  sbcl-foreign-vector.lisp
f3d-core/geo/: geographic-constants.lisp
f3d-core/img/: array-image.lisp  band-interleaved-image.lisp  color-image.lisp  getline-tests.lisp  image-config.lisp  image-defs.lisp  image-ffi.lisp  image-gc.lisp  image-mapping.lisp  image-ops.lisp  image-pkg.lisp  image-pyramids.lisp  iref-tests.lisp  iutb2tiff.lisp  mmap-array-image.lisp  noheader-io.lisp  paged-image.lisp  sysdef-image.lisp  tiff-ffi.lisp  vector-image.lisp
f3d-core/lcl/: acl-lcl-fns.lisp  cl-cme-lcl.asd  cmucl-lcl-fns.lisp  generic-lcl-fns.lisp  lcl-pkg.lisp  sbcl-lcl-fns.lisp  sysdef-lcl.lisp
f3d-core/libfreedius/: libfreedius.lisp  sysdef-libfreedius.lisp
f3d-core/lx/: binary-search.lisp  cl-cme-lx.asd  clos-tools.lisp  colors.lisp  common-symbols-pkg.lisp  custom.lisp  eval-cache.lisp  file-property-list.lisp  lisp-extensions.lisp  lisp-io.lisp  lx-pkg.lisp  pathname-extensions.lisp  struct-class.lisp  swank-weak-hash-table.lisp  sysdef-common-symbols.lisp  sysdef-ffi-extensions.lisp  sysdef-lisp-extensions.lisp  traverse-world.lisp  universal-time.lisp  weak-eval-cache.lisp
f3d-core/math/: CMakeLists.txt  bounding-boxes.lisp  cl-cme-math.asd  generic-arith.lisp  geometry.lisp  linear-diophantine-equation.lisp  load-math-library.lisp  math-ffi-replacement.lisp  math-ffi.lisp  math-pkg.lisp  matrices.lisp  polynomial-fit-1d.lisp  polynomial-fit.lisp  quaternions.lisp  rq-decomposition.lisp  solve.c++  sysdef-math.lisp  transform-matrix.lisp  vectors.lisp
f3d-core/math/c/: CMakeLists.txt  matrices.c++  matrices.h  solve.h
f3d-core/other/: clim.lisp  cmake-library.lisp  foreign-library.lisp
f3d-core/qffi/: CMakeLists.txt  cl-qffi.asd  generic-ffi-fns.lisp  lcl-ffi-frontend.lisp  load-foreign.lisp  mixed-lisp-system.lisp  qffi-pkg.lisp  qffi.def  qffi.lisp  sbcl64-foreign-vector.c++  sysdef-foreign-vector.lisp  sysdef-qffi.lisp
f3d-core/qffi/acl/: acl-ffi-backend.lisp  acl-ffi-fns.lisp
f3d-core/qffi/aclnew/: acl-ffi-backend.lisp  acl-ffi-fns.lisp  acl-foreign-vector.lisp
f3d-core/qffi/cffi/: cffi-backend.lisp
f3d-core/qffi/cmucl/: cmucl-array-address.lisp  cmucl-ffi-backend.lisp  cmucl-ffi-fns.lisp  cmucl-foreign-vector.c++  cmucl-foreign-vector.lisp
f3d-core/qffi/sbcl/: sbcl-array-address.lisp  sbcl-ffi-backend.lisp  sbcl-ffi-fns.lisp  sbcl-foreign-vector.lisp  sbcl1-foreign-vector.lisp  sbcl64-foreign-vector.c++
f3d-core/rpc/: dppdb-rpc.lisp  polynomial-transforms.lisp  rational-polynomial.lisp  rpc00a.lisp
f3d-core/system-tool/: boot.lisp  cl-cme-st.asd  cl-ev-pathnames.asd  patch-system-cc.lisp  patch-system-lqh.lisp  sysdef-ev-pathnames.lisp  system-tool-bootstrap.lisp  system-tool.lisp
f3d-core/transforms/: 4x4-motions.lisp  4x4-projection-decomposition.lisp  4x4-projection-fit.lisp  4x4-projection.lisp  4x4-transform.lisp  composite-transforms.lisp  coordinate-transforms.lisp  frame-camera-motions.lisp  frame-camera.lisp  geographic-constants.lisp  geographic-transforms.lisp  geoid-height.lisp  numeric-inverse-transform.lisp  rpc-macros.lisp  rpc-projection.lisp  rpc-zerop.lisp  sysdef-geographic-transforms.lisp  sysdef-rpc-projections.lisp  sysdef-transforms.lisp  temporal-transforms.lisp  transform-ffi.lisp  transform-fit.lisp  transform-path.lisp  transform-tools.lisp  transforms-pkg.lisp  transforms.asd  weak-children-hash-table-mixin.lisp
f3d-geom/: f3d-cmake-setup.cmake  f3d-geom.asd
f3d-geom/gl/: CMakeLists.txt  cocoa-gl-ffi.m  f3dglffi.def  glxffi.c++  tklayouts.c
f3d-geom/gl-ffi/: cl-opengl-extras.lisp  gl-headers.h  gl-import.lisp  gl-pkg-export-all.lisp  gl-state.lisp  glext-ffi.lisp  glu-ffi.lisp  glut-ffi.lisp  glut-fonts.lisp  lispglut.txt  sysdef-gl.lisp
f3d-geom/gl-objects/: 2d-objects.lisp  3d-objects.lisp  gl-object-basics.lisp  gl-objects.lisp  gl-vertices.lisp  graphics-styles.lisp  macros-gl-objects.lisp  non-4x4-projection-warp.lisp  obj-pkg.lisp  object-motions.lisp  sysdef-gl-objects.lisp  terrain-grid.lisp  time.lisp
f3d-gl/: f3d-gl.asd
f3d-gl/gl-ffi/: gl-ffi.lisp  gl-macros.lisp  gl-pkg.lisp  gl-utils.lisp  (+2 more)
f3d-tk/: README  f3d-gui.asd  f3d-tk.asd  finalize-cme.lisp
f3d-tk/lisptk/: CMakeLists.txt  lisptk-sbcl.def  lisptk.c  namespace.h  tk-chunks.m
(+169 files in other folders)
